--- a/每日一题-xm/疑问.md
+++ b/每日一题-xm/疑问.md
@@ -1,3 +1,9 @@
 # extends 含义与使用方法
+  1. 限制传入类型
+  2. 条件判断
 
 # infer
+- 占位符
+- 参考文章：https://juejin.cn/post/7077467010732392462
+
+# never / unknown / any 区别
